# onnx2tensorrt

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
modal/: bucketFile.py  deploy.py  test.py  util.py
